--- a/index.html
+++ b/index.html
@@ -3,21 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wedding Biodata</title>
+    <title>Your Name's Wedding Biodata</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to Our Wedding Biodata</h1>
+        <h1>Your Name's Wedding Biodata</h1>
         <p>We are excited to share our special day with you!</p>
     </header>
 
     <section id="my-details">
         <h2>My Details</h2>
-        <p><strong>Name:</strong> John Doe</p>
-        <p><strong>Age:</strong> 28</p>
-        <p><strong>Occupation:</strong> Software Engineer</p>
-        <p><strong>Hobbies:</strong> Traveling, Reading, Coding</p>
+        <div class="profile-section">
+            <img src="profile.jpg" alt="Profile Photo" class="profile-photo">
+            <div class="profile-info">
+                <p><strong>Name:</strong> John Doe</p>
+                <p><strong>Age:</strong> 28</p>
+                <p><strong>Occupation:</strong> Software Engineer</p>
+                <p><strong>Hobbies:</strong> Traveling, Reading, Coding</p>
+            </div>
+        </div>
     </section>
 
     <section id="family-details">
