Initial commit for wedding biodata website

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Your Name's Wedding Biodata</h1>
-        <p>We are excited to share our special day with you!</p>
+        <h1>Jaymin Suhagiya</h1>
     </header>
 
     <section id="my-details">
