--- a/index.html
+++ b/index.html
@@ -11,24 +11,41 @@
         <h1>Jaymin Suhagiya</h1>
     </header>
 
-    <section id="my-details">
-        <h2>My Details</h2>
+    <section id="personal-information">
+        <h2>Personal Information</h2>
         <div class="profile-section">
-            <img src="profile.jpg" alt="Profile Photo" class="profile-photo">
             <div class="profile-info">
                 <p><strong>Name:</strong> John Doe</p>
-                <p><strong>Age:</strong> 28</p>
+                <p><strong>DOB:</strong> January 1st, 1995</p>
+                <p><strong>Height:</strong> 5’9”</p>
+                <p><strong>Weight:</strong> 70 kg</p>
+                <p><strong>Native Place:</strong> New York, USA</p>
+                <p><strong>Cast:</strong> Smith</p>
+                <p><strong>Education:</strong> B.Sc. in Computer Science</p>
                 <p><strong>Occupation:</strong> Software Engineer</p>
-                <p><strong>Hobbies:</strong> Traveling, Reading, Coding</p>
             </div>
+            <img src="profile.jpg" alt="Profile Photo" class="profile-photo">
         </div>
     </section>
 
-    <section id="family-details">
-        <h2>Family Details</h2>
-        <p><strong>Father:</strong> Mr. John Doe Sr.</p>
-        <p><strong>Mother:</strong> Mrs. Jane Doe</p>
-        <p><strong>Siblings:</strong> One younger brother, Jack Doe</p>
+    <section id="family-information">
+        <h2>Family Information</h2>
+        <div class="info-section">
+            <p><strong>Father:</strong> Mr. John Doe Sr.</p>
+            <p><strong>Occupation:</strong> Business</p>
+            <p><strong>Mother:</strong> Mrs. Jane Doe</p>
+            <p><strong>Occupation:</strong> Housewife</p>
+            <p><strong>Siblings:</strong> Jack Doe, Student</p>
+            <p><strong>Address:</strong> 1234 Street Name, City, Country</p>
+        </div>
+    </section>
+
+    <section id="maternal-information">
+        <h2>Maternal Information</h2>
+        <div class="info-section">
+            <p><strong>Name:</strong> Mr. Vinubhai Parbatbhai Poshiya</p>
+            <p><strong>Native:</strong> Ravna, Rajkot</p>
+        </div>
     </section>
 
     <section id="photos">
@@ -41,7 +58,7 @@
     </section>
 
     <footer>
-        <p>Thank you for visiting our wedding biodata. We look forward to celebrating with you!</p>
+        <p>Thank you for visiting our wedding biodata.</p>
     </footer>
 </body>
 </html>
