Initial commit for wedding biodata website

--- a/biodata/index.html
+++ b/biodata/index.html
@@ -51,10 +51,14 @@
     <section id="photos">
         <h2>Photos</h2>
         <div class="photo-gallery">
-            <img src="photo1.jpg" alt="Engagement Photo">
-            <img src="photo2.jpg" alt="Family Photo">
-            <img src="photo3.jpg" alt="Vacation Photo">
+            <img src="photo1.jpeg" alt="Engagement Photo">
+            <img src="photo2.jpeg" alt="Family Photo">
+            <img src="photo3.jpeg" alt="Vacation Photo">
+            <img src="photo4.jpeg" alt="Vacation Photo">
+            <img src="photo5.jpeg" alt="Vacation Photo">
+            <img src="photo6.png" alt="Vacation Photo">
         </div>
     </section>
 </body>
 </html>
+å
