Initial commit for wedding biodata website

--- a/biodata/index.html
+++ b/biodata/index.html
@@ -53,8 +53,8 @@
         <div class="photo-gallery">
             <img src="photo1.jpeg" alt="Engagement Photo">
             <img src="photo2.jpeg" alt="Family Photo">
+            <img src="photo3.png" alt="Vacation Photo">
             <img src="photo3.jpeg" alt="Vacation Photo">
-            <img src="photo4.jpeg" alt="Vacation Photo">
             <img src="photo5.jpeg" alt="Vacation Photo">
             <img src="photo6.png" alt="Vacation Photo">
         </div>
