--- a/biodata/index.html
+++ b/biodata/index.html
@@ -189,6 +189,14 @@
                 font-size: 20px;
             }
 
+                 body {
+                font-size: 13px;
+            }
+
+            h1 {
+                font-size: 2.1rem !important;
+            }
+
 
 
             section {
