--- a/biodata/index.html
+++ b/biodata/index.html
@@ -370,7 +370,7 @@
 
   <script>
     var password = prompt("Enter the password to access this page:");
-    if (password === "jaymin9900") {
+    if (password === "J@ymin") {
       document.body.style.display =
         "block"; /* Show content after correct password */
     } else {
